# alice-llm-bridge

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  config.example.toml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml
crates/alice-protocol/: Cargo.toml
crates/alice-protocol/src/: lib.rs  request.rs  response.rs
crates/alice-protocol/tests/: request.rs  response.rs
crates/bridge-core/: Cargo.toml
crates/bridge-core/src/: command.rs  engine.rs  error.rs  lib.rs  mode.rs  model.rs  pending.rs  phrases.rs  profile.rs  prompt.rs  store.rs  testing.rs
crates/bridge-server/: Cargo.toml
crates/bridge-server/src/: assemble.rs  config.rs  lib.rs  main.rs  routes.rs  store_pg.rs
crates/bridge-server/tests/: webhook.rs
crates/llm-providers/: Cargo.toml
crates/llm-providers/src/: error.rs  lib.rs  openai.rs  types.rs
crates/llm-providers/tests/: openai.rs
docker/app/: Dockerfile
docker/postgres/: .env.example
docker/postgres/initdb/: 01-init-app-db.sh  init-app-db.sh
docs/: design.md  skill-setup.md
migrations/: 0001_init.sql
