[package]
name = "bridge-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Axum webhook server for the Alice LLM bridge"

[dependencies]
alice-protocol = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
bridge-core = { workspace = true }
chrono = { workspace = true }
llm-providers = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tower = { workspace = true, features = ["util"] }
wiremock = { workspace = true }
